# tgbacky

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  build.rs  env.example
.github/workflows/: ci.yml  release.yml
src/: app.rs  cli.rs  config.rs  error.rs  export.rs  fsutil.rs  lib.rs  main.rs  media.rs  pacing.rs  recovery.rs  report.rs  secrets.rs  shutdown.rs  storage.rs  telegram.rs  types.rs
src/commands/: auth.rs  chats.rs  doctor.rs  export.rs  mod.rs  profiles.rs  recover.rs  runs.rs  verify.rs
src/export/: processor.rs  progress.rs  scope.rs
src/storage/: migrations.rs  records.rs
src/telegram/: auth.rs  chats.rs  download.rs
